<resources>
    <string name="app_name">MovieBookingApp</string>
    <string name="lbl_welcome_title">Welcome!</string>
    <string name="lbl_welcome_sub_title">Hello! Welcome to Galaxy App.</string>
    <string name="btn_start">Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_login_sub_title">Welcome back, login to continue</string>
    <string name="lbl_email">Email</string>
    <string name="email_hint">lilyjohnson@gmail.com</string>
    <string name="lbl_password">Password</string>
    <string name="password_hint">*******</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_sign_in_with_facebook">Sign in with facebook</string>
    <string name="btn_sign_in_with_google">Sign in with google</string>
    <string name="btn_confirm">Confirm</string>
    <string name="lbl_phone">Phone</string>
    <string name="phone_hint">+959786</string>
    <string name="lbl_plot_summary">Plot Summary</string>
    <string name="plot_summary">Legendary assassin John Wick (Keanu Reeves) retired from his violent career after marrying the love of his life. Her sudden death leaves John in deep mourning. When sadistic mobster Iosef Tarasov (Alfie Allen) and his thugs steal John\'s prized car and kill the puppy that was a last gift from his wife, John unleashes the remorseless killing machine within and seeks vengeance.</string>
    <string name="lbl_cast">Cast</string>
    <string name="default_title_movie_list_view_pod">Now Showing</string>
    <string name="new_title_movie_list_view_pod">Coming Soon</string>
    <string name="btn_get_your_ticket">Get your ticket</string>
    <string name="lbl_name">Name</string>
    <string name="name_hint">Lily Johnson</string>
    <string name="lbl_tab_login">Login</string>
    <string name="lbl_tab_sign_up">Sign Up</string>
    <string name="btn_next">Next</string>
    <string name="promo_code_hint"><i>Enter promo code</i></string>
    <string name="lbl_get_promo_code">Don\'t have any promo code ? <b>Get it now</b></string>
    <string name="lbl_payment_amount">Payment amount</string>
    <string name="card_stars">****</string>
    <string name="lbl_card_holder_cap_letters">CARD HOLDER</string>
    <string name="lbl_expires">EXPIRES</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="lbl_card_holder_small_letters">Card Holder</string>
    <string name="lbl_expiration_date">Expiration Date</string>
    <string name="lbl_cvc">CVC</string>
    <string name="hint_card_number">1234.5678.9101.8014</string>
    <string name="hint_expiration_date">08/21</string>
    <string name="hint_cvc">150</string>
    <string name="btn_add_new_card">Add new card</string>
    <string name="dash_divider">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</string>
    <string name="dash_divider_long">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_seats">Seats</string>
    <string name="lbl_row">Row</string>
    <string name="lbl_screen">Screen</string>
    <string name="lbl_theater">Theater</string>
    <string name="lbl_showtime_date">Showtime - Date</string>
    <string name="lbl_booking_no">Booking no</string>
    <string name="lbl_voucher_title">Awesome!</string>
    <string name="lbl_voucher_sub_title">This is your ticket.</string>
    <string name="lbl_payment_method">Payment Method</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_promotion_code">Promotion Code</string>
    <string name="lbl_select_a_language">Select a language</string>
    <string name="lbl_term_of_services">Term of services</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_rate_us">Rate us</string>
    <string name="lbl_log_out">Log out</string>
    <string name="lbl_available">Available</string>
    <string name="lbl_reserved">Reserved</string>
    <string name="lbl_your_selection">Your Selection</string>
    <string name="lbl_tickets">Tickets</string>
</resources>