<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium_2">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_email"
            android:textColor="@color/secondary_text"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:layout_below="@id/tvEmailLabel"
            android:layout_marginTop="@dimen/margin_medium"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_password"
            android:textColor="@color/secondary_text"
            android:layout_below="@id/etEmail"
            android:layout_marginTop="@dimen/margin_medium_2"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_below="@id/tvPasswordLabel"
            android:layout_marginTop="@dimen/margin_medium"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_name"
            android:textColor="@color/secondary_text"
            android:layout_below="@id/etPassword"
            android:layout_marginTop="@dimen/margin_medium_2"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:layout_below="@id/tvNameLabel"
            android:layout_marginTop="@dimen/margin_medium"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_phone"
            android:textColor="@color/secondary_text"
            android:layout_below="@id/etName"
            android:layout_marginTop="@dimen/margin_medium_2"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:layout_below="@id/tvPhoneLabel"
            android:layout_marginTop="@dimen/margin_medium"/>

        <include
            android:id="@+id/vpSignUp"
            layout="@layout/view_pod_login_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPhone"
            android:layout_marginTop="@dimen/margin_medium_2"/>

    </RelativeLayout>
</ScrollView>