<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium_2">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_email"
            android:textColor="@color/secondary_text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEmailLabel"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/email_hint"
            android:text="waewaee@gmail.com"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_password"
            android:textColor="@color/secondary_text"
            android:layout_below="@id/etEmail"
            android:layout_marginTop="@dimen/margin_medium_2"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPasswordLabel"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/password_hint"
            android:text="123456"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/secondary_text"
            android:layout_below="@id/etPassword"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_medium_3"/>

        <include
            android:id="@+id/vpLogin"
            layout="@layout/view_pod_login_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnForgotPassword"
            android:layout_marginTop="@dimen/margin_medium_3"/>

    </RelativeLayout>

</ScrollView>