<?xml version="1.0" encoding="utf-8"?>
<com.waewaee.moviebookingapp.view.pods.LoginSignUpViewPod
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInWithFacebook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_btn_start"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/btn_sign_in_with_facebook"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_regular_2x"
        android:textAllCaps="false"
        app:icon="@drawable/facebook"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/margin_medium_2"
        app:iconTint="@null"
        app:cornerRadius="@dimen/margin_medium"
        app:strokeColor="@color/secondary_text"
        app:strokeWidth="1dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_btn_start"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/btn_sign_in_with_google"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_regular_2x"
        android:textAllCaps="false"
        app:icon="@drawable/google"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/margin_medium_3"
        app:iconTint="@null"
        app:cornerRadius="@dimen/margin_medium"
        app:strokeColor="@color/secondary_text"
        app:strokeWidth="1dp"
        android:layout_below="@id/btnSignInWithFacebook"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_btn_start"
        android:text="@string/btn_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/margin_medium"
        app:elevation="@dimen/margin_medium_2"
        android:layout_below="@id/btnSignInWithGoogle"
        android:layout_marginBottom="@dimen/margin_xxlarge"/>

</com.waewaee.moviebookingapp.view.pods.LoginSignUpViewPod>