<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PaymentActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_black_24dp"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginStart="@dimen/margin_medium_2"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPaymentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_payment_amount"
        android:layout_below="@id/btnBack"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$ 926.21"
        android:layout_below="@id/tvPaymentLabel"
        android:textSize="@dimen/text_heading_1x"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"/>

    <alirezat775.lib.carouselview.CarouselView
        android:id="@+id/cardCarousel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTotal"
        android:layout_marginTop="@dimen/margin_large"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnAddNewCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_new_card"
        android:textSize="@dimen/text_regular_2x"
        android:textColor="@color/md_green_A700"
        android:textStyle="bold"
        android:clickable="true"
        android:drawableStart="@drawable/ic_baseline_add_circle_green_24dp"
        android:drawablePadding="@dimen/margin_medium_2"
        android:layout_below="@id/cardCarousel"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_medium_2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_btn_start"
        android:text="@string/btn_confirm"
        android:textAllCaps="false"
        android:textSize="@dimen/text_regular_2x"
        app:cornerRadius="@dimen/margin_medium"
        app:elevation="@dimen/margin_medium_2"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>